# kitchen

./: .envrc  .gitignore  Cargo.toml  Makefile  flake.nix  kitchen.nix  readme.md  result  run-non-nix.sh  run.sh  shell.nix
api/: Cargo.toml
api/src/: lib.rs
kitchen/: Cargo.toml  sqlx-data.json
kitchen/.session_store/: IDENTITY  LOG  LOG.old.1661649246537931  MANIFEST-000011  OPTIONS-000009
kitchen/.sqlx/: query-01018c919131848f8fa907a1356a1356b2aa6ca0912de8a296f5fef3486b5ff9.json  query-05a9f963e3f18b8ceb787c33b6dbdac993f999ff32bb5155f2dff8dc18d840bf.json  query-104f07472670436d3eee1733578bbf0c92dc4f965d3d13f9bf4bfbc92958c5b6.json  query-10de1e9950d7d3ae7f017b9175a1cee4ff7fcbc7403a39ea02930c75b4b9160a.json  query-10e1c111a16d647a106a3147f4e61e34b0176860ca99cb62cb43dc72550ad990.json  query-160a9dfccf2e91a37d81f75eba21ec73105a7453c4f1fe76a430d04e525bc6cd.json  query-19832e3582c05ed49c676fde33cde64274379a83a8dd130f6eec96c1d7250909.json  query-1b4a7250e451991ee7e642c6389656814e0dd00c94e59383c02af6313bc76213.json  query-1b6fd91460bef61cf02f210404a4ca57b520c969d1f9613e7101ee6aa7a9962a.json  query-1cc4412dfc3d4acdf257e839b50d6c9abbb6e74e7af606fd12da20f0aedde3de.json  query-23beb05e40cf011170182d4e98cdf1faa3d8df6e5956e471245e666f32e56962.json  query-2582522f8ca9f12eccc70a3b339d9030aee0f52e62d6674cfd3862de2a68a177.json  query-27aa0a21f534cdf580841fa111136fc26cf1a0ca4ddb308c12f3f8f5a62d6178.json  query-288535e7b9e1f02ad1b677e3dddc85f38c0766ce16d26fc1bdd2bf90ab9a7f7c.json  query-2e076acd2405d234daaa866e5a2ac1e10989fc8d2820f90aa722464a7b17db6b.json  query-37f382be1b53efd2f79a0d59ae6a8717f88a86908a7a4128d5ed7339147ca59d.json  query-3caefb86073c47b5dd5d05f639ddef2f7ed2d1fd80f224457d1ec34243cc56c7.json  query-3e43f06f5c2e959f66587c8d74696d6db27d89fd2f7d7e1ed6fa5016b4bd1a91.json  query-4237ff804f254c122a36a14135b90434c6576f48d3a83245503d702552ea9f30.json  query-5883c4a57def93cca45f8f9d81c8bba849547758217cd250e7ab28cc166ab42b.json  query-5d743897fb0d8fd54c3708f1b1c6e416346201faa9e28823c1ba5a421472b1fa.json  query-64af3f713eb4c61ac02cab2dfea83d0ed197e602e99079d4d32cb38d677edf2e.json  query-699ff0f0d4d4c6e26a21c1922a5b5249d89ed1677680a2276899a7f8b26344ee.json  query-6c43908d90f229b32ed8b1b076be9b452a995e1b42ba2554e947c515b031831a.json  query-6e28698330e42fd6c87ba1e6f1deb664c0d3995caa2b937ceac8c908e98aded6.json  query-6f11d90875a6230766a5f9bd1d67665dc4d00c13d7e81b0d18d60baa67987da9.json  query-7578157607967a6a4c60f12408c5d9900d15b429a49681a4cae4e02d31c524ec.json  query-7695a0602395006f9b76ecd4d0cb5ecd5dee419b71b3b0b9ea4f47a83f3df41a.json  query-83824ea638cb64c524f5c8984ef6ef28dfe781f0abf168abc4ae9a51e6e0ae88.json  query-8490e1bb40879caed62ac1c38cb9af48246f3451b6f7f1e1f33850f1dbe25f58.json  query-928a479ca0f765ec7715bf8784c5490e214486edbf5b78fd501823feb328375b.json  query-93af0c367a0913d49c92aa69022fa30fc0564bd4dbab7f3ae78673a01439cd6e.json  query-9ad4acd9b9d32c9f9f441276aa71a17674fe4d65698848044778bd4aef77d42d.json  query-ad3408cd773dd8f9308255ec2800171638a1aeda9817c57fb8360f97115f8e97.json  query-ba07658eb11f9d6cfdb5dbee4496b2573f1e51f4b4d9ae760eca3b977649b5c7.json  query-c988364f9f83f4fa8bd0e594bab432ee7c9ec47ca40f4d16e5e2a8763653f377.json  query-d84685a82585c5e4ae72c86ba1fe6e4a7241c4c3c9e948213e5849d956132bad.json  query-e38183e2e16afa308672044e5d314296d7cd84c1ffedcbfe790743547dc62de8.json  query-eb99a37e18009e0dd46caccacea57ba0b25510d80a4e4a282a5ac2be50bba81c.json  query-ee0491c7d1a31ef80d7abe6ea4c9a8b0618dba58a0a8bceef7bdafec98ccd543.json  (+1 more)
kitchen/migrations/: 20220831185348_initial.down.sql  20220831185348_initial.up.sql  20220901233514_recipes_v1.down.sql  20220901233514_recipes_v1.up.sql  20221030222458_mealplans_v0.down.sql  20221030222458_mealplans_v0.up.sql  20221119220732_inventory.down.sql  20221119220732_inventory.up.sql  20221210140958_mealplans_primary_key.down.sql  20221210140958_mealplans_primary_key.up.sql  20221210161348_extra_itmes_inventory.down.sql  20221210161348_extra_itmes_inventory.up.sql  20230105215101_category_maps.down.sql  20230105215101_category_maps.up.sql  20230106195850_staples.down.sql  20230106195850_staples.up.sql  20230125164426_add_recipe_categories.down.sql  20230125164426_add_recipe_categories.up.sql  20230321193852_plan-table.down.sql  20230321193852_plan-table.up.sql  20240701002811_recipe-servings.down.sql  20240701002811_recipe-servings.up.sql
kitchen/migrations/2022-07-22-223342_create_recipes/: down.sql  up.sql
kitchen/src/: api.rs  cli.rs  main.rs  migrations.rs  models.rs  schema.rs  store.rs  web.rs
kitchen/src/web/: auth.rs  metrics.rs  mod.rs  session.rs  storage.rs
kitchen/src/web/storage/: error.rs  fetch_all_plans.sql  fetch_category_mappings_for_user.sql  fetch_extra_items.sql  fetch_extra_items_for_date.sql  fetch_filtered_ingredients_for_date.sql  fetch_inventory_filtered_ingredients.sql  fetch_inventory_modified_amts.sql  fetch_latest_meal_plan.sql  fetch_meal_plans_since.sql  fetch_modified_amts_for_date.sql  fetch_plan_for_date.sql  fetch_staples.sql  file_store.rs  init_meal_plan.sql  mod.rs  save_category_mappings_for_user.sql  save_filtered_ingredients_for_date.sql  save_inventory_filtered_ingredients.sql  save_inventory_modified_amts.sql  save_meal_plan.sql  save_modified_amts_for_date.sql  save_staples.sql  store_extra_items.sql  store_extra_items_for_date.sql
recipe-store/: Cargo.toml
recipe-store/src/: lib.rs  tests.rs
web/: Cargo.toml  index.html
web/src/: api.rs  app_state.rs  js_lib.rs  lib.rs  linear.rs  main.rs  router_integration.rs  service.rs  store.rs  typings.rs  web.rs
web/src/components/: add_recipe.rs  categories.rs  footer.rs  header.rs  mod.rs  number_field.rs  plan_list.rs  recipe.rs  recipe_list.rs  recipe_plan.rs  recipe_selection.rs  recipe_selector.rs  root.rs  shopping.rs  shopping_list.rs  staples.rs  tabs.rs  toast.rs
web/src/pages/: categories.rs  cook.rs  inventory.rs  login.rs  mod.rs  plan.rs  recipe.rs
web/src/pages/manage/: add_recipe.rs  categories.rs  ingredients.rs  mod.rs  staples.rs
web/src/pages/planning/: cook.rs  (+4 more)
web/src/routing/: mod.rs
web/static/: app.css
(+35 files in other folders)
