[package]
name = "api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
recipes = { path = "../recipes" }
chrono = "0.4.22"


[dependencies.axum]
version = "0.5.16"
optional = true

[features]
default = []
server = ["axum"]
browser = []