[package]
name = "api"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recipes = { path = "../recipes" }
chrono = "0.4.22"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.axum]
version = "0.5.16"
optional = true

[features]
default = []
server = ["axum"]
browser = []
