[package]
name = "kitchen"
version = "0.2.10"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
recipes = { path = "../recipes" }
recipe-store = {path = "../recipe-store" }
csv = "1.1.1"
axum = "0.5.13"
rust-embed="6.4.0"
mime_guess = "2.0.4"
async-trait = "0.1.57"
tower-http = { version = "0.3.0", features = ["trace"] }

[dependencies.clap]
version = "3.2.16"
features = [ "cargo" ]

[dependencies.async-std]
version = "1.10.0"
features = ["tokio1"]