[package]
name = "kitchen"
version = "0.2.10"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
recipes = { path = "../recipes" }
recipe-store = {path = "../recipe-store" }
csv = "1.1.1"
rust-embed="6.4.0"
mime_guess = "2.0.4"
async-trait = "0.1.57"
async-session = "3.0.0"
ciborium = "0.2.0"
tower = "0.4.13"
serde = "1.0.144"
cookie = "0.16.0"

[dependencies.argon2]
version = "0.4.1"

[dependencies.secrecy]
version = "0.8.0"
features = ["serde"]

[dependencies.axum-auth]
version = "0.3.0"
features = ["auth-basic"]

[dependencies.tower-http]
version = "0.3.0"
features = ["trace", "auth", "sensitive-headers"]

[dependencies.uuid]
version = "1.0.144"
features = ["serde", "v4"]

[dependencies.axum]
version = "0.5.15"
features = ["headers", "http2"]

[dependencies.clap]
version = "3.2.16"
features = [ "cargo" ]

[dependencies.async-std]
version = "1.10.0"
features = ["tokio1"]

[dependencies.sqlx]
version = "0.6.1"
features = ["sqlite", "runtime-async-std-rustls", "offline"]
optional = true

[dependencies.rocksdb]
version = "0.19.0"
optional = true

[features]
sqlite = ["dep:sqlx"]
rocksdb = ["dep:rocksdb"]
default = ["sqlite"]