[package]
name = "kitchen"
version = "0.2.25"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
recipes = { path = "../recipes" }
client-api = { path = "../api", features = ["server"], package = "api" }
csv = "1.1.1"
rust-embed="6.4.0"
mime_guess = "2.0.4"
async-trait = "0.1.57"
async-session = "3.0.0"
ciborium = "0.2.0"
tower = "0.4.13"
serde = "<=1.0.171"
cookie = "0.17.0"
chrono = "0.4.22"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
futures = "0.3"
metrics-process = "1.0.8"

[dependencies.argon2]
version = "0.5.0"

[dependencies.secrecy]
version = "0.8.0"
features = ["serde"]

[dependencies.axum-server]
version = "0.4.4"
features = [ "tls-rustls" ]

[dependencies.axum-auth]
version = "0.3.0"
features = ["auth-basic"]

[dependencies.tower-http]
version = "0.3.0"
features = ["trace", "auth", "sensitive-headers"]

[dependencies.uuid]
version = "1.0.144"
features = ["serde", "v4"]

[dependencies.axum]
version = "0.5.16"
features = ["headers", "http2"]

[dependencies.clap]
version = "3.2.16"
features = [ "cargo" ]

[dependencies.async-std]
version = "1.12.0"
features = ["tokio1"]

[dependencies.sqlx]
version = "0.7"
features = ["sqlite", "runtime-async-std", "tls-rustls", "chrono"]
