[package]
name = "recipe-store"
version = "0.1.0"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recipes = { path="../recipes" }
chrono = "~0.4"

[dependencies.rusqlite]
version = "~0.25.0"
features = ["backup", "bundled", "session", "chrono", "uuid"]

[dependencies.uuid]
version = "~0.8.2"
features = ["v4"]