[package]
name = "recipe-store"
version = "0.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recipes = {path = "../recipes" }
async-trait = "0.1.57"
async-std = "1.10.0"
tracing = "0.1.35"
reqwasm = "0.5.0"
serde_json = "1.0.79"
serde = "1.0.143"