[package]
name = "kitchen-wasm"
version = "0.2.9"
edition = "2021"

[features]
ssr = []
web = []
default = ["web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
recipes = { path = "../recipes" }
# This makes debugging panics more tractable.
console_error_panic_hook = "0.1.7"
serde_json = "1.0.79"
tracing = "0.1.35"
tracing-browser-subscriber = "0.1.0"
async-trait = "0.1.57"
base64 = "0.13.0"

[dependencies.reqwasm]
version = "0.5.0"

[dependencies.wasm-bindgen]
# we need wasm-bindgen v0.2.81 exactly
version = "= 0.2.81"

[dependencies.web-sys]
version = "0.3"
features = [
    "Event",
    "EventTarget",
    "History",
    "HtmlAnchorElement",
    "HtmlBaseElement",
    "HtmlDialogElement",
    "KeyboardEvent",
    "Location",
    "PopStateEvent",
    "Url",
    "Window",
    "Storage"
]

[dependencies.sycamore]
version = "0.8.2"
features = ["suspense", "serde", "default", ]

[profile.release]
lto = true
opt-level = "s"
