[package]
name = "kitchen-wasm"
version = "0.2.25"
edition = "2021"

[features]
ssr = []
web = []
default = ["web"]
debug_logs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
recipes = { path = "../recipes" }
client-api = { path = "../api", package="api", features = ["browser"] }
sycamore-state = "0.1.0"
# This makes debugging panics more tractable.
console_error_panic_hook = "0.1.7"
serde_json = "1.0.79"
tracing = "0.1.35"
async-trait = "0.1.57"
base64 = "0.21.0"
sycamore-router = "0.8"
js-sys = "0.3.60"
wasm-web-component = { git = "https://github.com/zaphar/wasm-web-components.git", rev = "v0.3.0" }
maud = "*"

[dependencies.serde]
version = "<=1.0.171"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["fmt", "time"]

[dependencies.tracing-web]
 version = "0.1.2"

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.gloo-net]
version = "0.4.0"

[dependencies.wasm-bindgen]
# we need wasm-bindgen v0.2.84 exactly
version = "= 0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
    "Event",
    "InputEvent",
    "CustomEvent",
    "EventTarget",
    "History",
    "HtmlAnchorElement",
    "HtmlDivElement",
    "HtmlSpanElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlBaseElement",
    "HtmlDialogElement",
    "KeyboardEvent",
    "Location",
    "PopStateEvent",
    "Url",
    "Window",
    "Storage"
]

[dependencies.sycamore]
version = "0.8.2"
features = ["suspense", "serde", "default", ]
